deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-application
  namespace: gbp-tenant-namespace
  labels:
    app: core-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-application
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: core-application
    spec:
      containers:
        - name: core-application-container
          image: public.ecr.aws/norse/gbp-core-api:1.0
          ports:
            - containerPort: 8080
        - name: financial-product-sidecar-container
          image: public.ecr.aws/norse/financial-ext-api:1.0
          ports:
            - containerPort: 8081
